# game_of_life

./: README.md
cpp_backend/: CMakeLists.txt  main.cpp
cpp_backend/gol/: gol.h
cpp_backend/tests/: CMakeLists.txt  gol_test.cpp
python/: gof_nn.py  gol.h5  gol.ipynb  gol_nn.py  requirements.txt  test_model.ipynb  test_model.py
